[project]
name = "minimalist-blog-api"
version = "1.0.0"
description = "A minimalist blog API built with FastAPI, PostgreSQL, and Redis"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "redis[hiredis]==5.2.1",
    "structlog>=24.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "httpx==0.28.1",
    "aiosqlite>=0.19",
    "ruff>=0.9",
]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade — keep syntax modern
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "B008", # Ignore: do not perform function calls in default arguments
            # FastAPI relies on Depends() as default values — this is intentional
]

[tool.ruff.lint.per-file-ignores]
# Seed data uses wide aligned tuples — line length doesn't apply here
"scripts/seed.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "strict"
